Week 8: Update Google Map open-source library to use react-google-maps and implement visualization on each event when clicked on

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>COMP-5130</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD24fO96Lsk2K_ZNdIgxCr_gwKpFg6xlpo&v=3.exp&libraries=geometry,drawing,places"></script>
 </head>
 <body>
     <div id="root">
